--- a/client/package.json
+++ b/client/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.10.0",
+    "@mui/material": "^5.10.7",
+    "@mui/styles": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "express": "^4.18.1",
+    "material": "^0.4.3",
     "react": "^18.2.0",
+    "react-actioncable-provider": "^2.0.0",
+    "react-chat-engine": "^1.11.23",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
     "react-tinder-card": "^1.4.5",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
